--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,27 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link
+      href="//db.onlinewebfonts.com/c/00561b492d88a5287a5def1e83a34882?family=Gumela"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <style>
+      @font-face {
+        font-family: Gumela;
+        src: url("../src/fonts/*");
+        font-display: swap;
+      }
+      * {
+        font-family: "Gumela", sans-serif;
+        font-weight: normal;
+        font-size: 20px;
+      }
+      body {
+        margin: 0;
+      }
+    </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -36,5 +57,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
